<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/third__text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/math"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/operation"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/math_op"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/third__text_view" />


        <Button
            android:id="@+id/next"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="71dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="72dp"
            android:background="#71FF7A"
            android:text="@string/to"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/operation" />

        <Button
            android:id="@+id/prev"
            android:layout_width="268dp"
            android:layout_height="42dp"
            android:layout_marginStart="71dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="72dp"
            android:background="#FF0000"
            android:text="@string/bback"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/operation" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>