<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment_2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/second__text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:inputType="textPersonName"
            android:hint="@string/second_text" />

        <Button
            android:id="@+id/prev"
            android:layout_width="268dp"
            android:layout_height="48dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="72dp"
            android:background="#FF0000"
            android:text="@string/bback"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second__text_view" />

        <Button
            android:id="@+id/next"
            android:layout_width="268dp"
            android:layout_height="48dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="72dp"
            android:background="#71FF7A"
            android:text="@string/to"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second__text_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>